--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,105 @@
-body {
-    background-color: white;
+/* create Responsive website*/
+
+
+/*to remove the white space*/
+
+.contain {
+    overflow: hidden;
+}
+
+@media screen and (max-width:991px) {
+    .nav-toggle {
+        display: block;
+        margin-right: 20px;
+    }
+    .main-nav {
+        overflow: initial;
+    }
+    .nav-links {
+        position: absolute;
+        background-color: white;
+        left: -100%;
+        top: 100%;
+        width: 100%;
+        padding-block: 20px;
+        transition: 0.2s ease-out;
+    }
+    .nav-links.active {
+        left: 0;
+    }
+    .nav-links ul {
+        flex-direction: column;
+    }
+    .examples-area {
+        gap: 20px;
+    }
+    .examples-card {
+        width: calc(50% - 10px);
+        height: 200px;
+    }
+    h3 {
+        font-size: 1.2rem;
+    }
+    h4 {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width:767px) {
+    .header-section {
+        flex-direction: column-reverse;
+    }
+    .header-left {
+        max-width: 100vw;
+        text-align: center;
+    }
+    .primary-button {
+        width: 100%;
+        margin-left: 1rem;
+    }
+    .features-card {
+        min-width: cal(50% - 10px);
+        text-align: center;
+    }
+    .big-feature-container,
+    #designrow {
+        flex-direction: column;
+    }
+    .media {
+        flex-direction: column;
+        align-items: center;
+    }
+    .link-column {
+        align-items: center;
+        margin-top: 1.5rem;
+    }
+    .subfooter-container {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width:479px) {
+     :root {
+        padding: 10px;
+    }
+    h1 {
+        font-size: 2rem;
+        ;
+    }
+    h2 {
+        font-size: 1.5rem;
+    }
+    h3 {
+        font-size: 1rem;
+    }
+    p {
+        font-size: 0.9rem;
+    }
+    .features-card {
+        min-width: 100%;
+        text-align: center;
+    }
+    .examples-card {
+        width: 100%;
+    }
 }
